<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dvl_rviz_plugins</name>
  <version>0.1.0</version>
  <description>RViz2 plugin for visualizing marine_acoustic_msgs/msg/Dvl messages.</description>
  <maintainer email="a.lunawat@example.com">Arihant Lunawat</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>marine_acoustic_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
